# otus_homework_1

./: .gitignore  Makefile  README.md  pyproject.toml
parser/: core.py  main.py  parser.py  utils.py
